--- a/pages/services.html
+++ b/pages/services.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FitBody</title>
-    <style>
-      img {
-        width: 300px;
-      }
-    </style>
+    <link rel="stylesheet" href="../styles/services.css" />
   </head>
   <body>
     <nav class="container">
@@ -25,9 +21,9 @@
       </ul>
     </nav>
 
-    <section>
+    <section class="container">
       <h2>Our Services</h2>
-      <div class="container">
+      <div class="boxs">
         <div>
           <img
             src="../images/bodybuilder-training-arm-with-resistance-band.jpg"
