--- a/pages/subscription.html
+++ b/pages/subscription.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FitBody</title>
+    <link rel="stylesheet" href="../styles/subsciption.css" />
   </head>
   <body>
     <nav class="container">
@@ -20,7 +21,7 @@
       </ul>
     </nav>
 
-    <section>
+    <section class="container">
       <div class="boxs">
         <div class="box">
           <h2>Month To Month</h2>
