--- a/pages/about.html
+++ b/pages/about.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FitBody</title>
-    <style>
-      img {
-        width: 350px;
-      }
-    </style>
+    <link rel="stylesheet" href="../styles/about.css" />
   </head>
   <body>
     <nav class="container">
@@ -19,13 +15,13 @@
         <li><a href="../index.html">Home</a></li>
         <li><a href="subscription.html">Subscription</a></li>
         <li><a href="services.html">Services</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="#">Login</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="login.html">Login</a></li>
         <li><a href="sign.html" class="sign">Sign Up</a></li>
       </ul>
     </nav>
 
-    <section>
+    <section class="container">
       <h2>Our Team</h2>
 
       <div class="boxs">
