--- a/pages/sign.html
+++ b/pages/sign.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FitBody</title>
+    <link rel="stylesheet" href="../styles/sign.css" />
   </head>
   <body>
     <nav class="container">
@@ -21,21 +22,49 @@
     </nav>
     <section>
       <form method="post">
-        <label for="fname">First Name : </label>
-        <input type="text" name="fname" id="fname" required /><br />
-        <label for="lname">Last Name : </label>
-        <input type="text" name="lname" id="lname" required /><br />
-        <label for="mail">E-Mail : </label>
-        <input type="mail" name="mail" id="mail" required /><br />
-        <label for="pass">Password : </label>
-        <input type="password" name="pass" id="pass" required /><br />
-        <label for="phone">Phone : </label>
-        <input type="tel" name="phone" id="phone" required /><br />
-        <input type="radio" name="gender" id="male" required />
-        <label for="male">Male </label> <br />
-        <input type="radio" name="gender" id="female" required />
-        <label for="female">Female </label><br />
+        <input
+          type="text"
+          name="fname"
+          id="fname"
+          required
+          placeholder="First Name"
+        />
+        <input
+          type="text"
+          name="lname"
+          id="lname"
+          required
+          placeholder="Last Name"
+        />
+        <input
+          type="email"
+          name="mail"
+          id="mail"
+          required
+          placeholder="E-Mail"
+        />
+        <input
+          type="password"
+          name="pass"
+          id="pass"
+          required
+          placeholder="Password"
+        />
+        <input
+          type="tel"
+          name="phone"
+          id="phone"
+          required
+          placeholder="Phone"
+        />
+        <div>
+          <input type="radio" name="gender" id="male" required />
+          <label for="male">Male </label>
+          <input type="radio" name="gender" id="female" required />
+          <label for="female">Female </label>
+        </div>
         <input type="submit" value="Submit" />
+        <a href="login.html">Login ?</a>
       </form>
     </section>
 
